k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-backend
  labels:
    app: doctor-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-backend
  template:
    metadata:
      labels:
        app: doctor-backend
    spec:
      containers:
        - name: doctor-backend
          image: myacromar.azurecr.io/doctor-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
