k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: doctor-backend-service
  labels:
    app: doctor-backend
spec:
  type: ClusterIP
  selector:
    app: doctor-backend
  ports:
    - port: 5000
      targetPort: 5000
