k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: doctor-frontend-service
  labels:
    app: doctor-frontend
spec:
  type: ClusterIP
  selector:
    app: doctor-frontend
  ports:
    - port: 80
      targetPort: 80
